--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
 
+        <ol id=surname-list>
+
+        </ol>
+
 
 
         <script src="js/script.js" charset="utf-8"></script>
