inserimento posizione lista ordinata

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         </ol>
 
 
+        <div id="position"></div>
+
+
+
+
+
 
         <script src="js/script.js" charset="utf-8"></script>
     </body>
